For colored Hex triplet (#RRGGBB) ... #48534

Closed
opened 2016-05-28 04:45:51 +02:00 by Daniel Rivera · 6 comments

System Information
Linux *-pc 4.4.11-1-MANJARO #1 SMP PREEMPT Thu May 19 18:14:14 UTC 2016 x86_64 GNU/Linux

Blender Version
Blender 2.77 (sub 1)

Exact steps for others to reproduce the error

Selecting color "for colored Hex triplet (#RRGGBB)" allows excess characters. I think the right thing would be something like:

Examples:

- 000000  -> Correct [ 6 chars ]
- 0000001 -> Error   [ 7 chars ]

Temporary solution [interface_regions.c]:

Previous:

  bt = uiDefBut (block, UI_BTYPE_TEXT, 0, IFACE _ ("Hex"), 0, YCO, butwidth, UI_UNIT_Y, hexcol, 0, 8, 0, 0, TIP _ ("Hex triplet for Color (#RRGGBB)")) ;

Now:

  bt = uiDefBut (block, UI_BTYPE_TEXT, 0, IFACE _ ("Hex"), 0, YCO, butwidth, UI_UNIT_Y, hexcol, 0, 7, 0, 0, TIP _ ("Hex triplet for Color (#RRGGBB)")) ;
**System Information** Linux *-pc 4.4.11-1-MANJARO #1 SMP PREEMPT Thu May 19 18:14:14 UTC 2016 x86_64 GNU/Linux **Blender Version** Blender 2.77 (sub 1) **Exact steps for others to reproduce the error** Selecting color "for colored Hex triplet (#RRGGBB)" allows excess characters. I think the right thing would be something like: **Examples:** - 000000 -> Correct [ 6 chars ] - 0000001 -> Error [ 7 chars ] **Temporary solution [interface_regions.c]:** **Previous:** ``` bt = uiDefBut (block, UI_BTYPE_TEXT, 0, IFACE _ ("Hex"), 0, YCO, butwidth, UI_UNIT_Y, hexcol, 0, 8, 0, 0, TIP _ ("Hex triplet for Color (#RRGGBB)")) ; ``` **Now:** ``` bt = uiDefBut (block, UI_BTYPE_TEXT, 0, IFACE _ ("Hex"), 0, YCO, butwidth, UI_UNIT_Y, hexcol, 0, 7, 0, 0, TIP _ ("Hex triplet for Color (#RRGGBB)")) ;
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @dr2d4

Added subscriber: @dr2d4

This issue was referenced by 9d5aead88f

This issue was referenced by 9d5aead88f4d62152f7f4a36f84fe0e1dc3463d7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @brecht

Added subscriber: @brecht

I think limiting the length is fine, no need to show any errors for this type of thing. Probably it was set to 8 before because whoever wrote this code thought the length should include the null terminator.

I think limiting the length is fine, no need to show any errors for this type of thing. Probably it was set to 8 before because whoever wrote this code thought the length should include the null terminator.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48534
No description provided.