Fix T48534: color picker hex #RRGGBB input allows typing one character too many.

Fix suggested by Daniel Rivera.